footer logo fixed,pacakages alignment issue,added logo to top nav in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,13 @@ footer p{
   color: red;
 }
 
-@media only screen and (max-width: 425px){
+@media only screen and (max-width: 430px){
+    .navbar{
+        background-color: #000 !important;
+    }
+    .navbar span{
+        color: white !important;
+    }
     .navbar-dark .navbar-brand{
         
         font-size: 24px;
@@ -335,12 +341,16 @@ footer p{
  
 
     }
+
+    .navbar-dark .navbar-nav .nav-link {
+        color: #fff !important;
+    }
     .navbar-tagline {
         font-size:14px !important;
         font-style: italic !important;
         position: absolute !important; 
      top: 40px !important; 
-     left:30px
+     left:150px
         /* padding: 0px; */
         /* margin: -10px 30px 20px; */
         /* margin: -30px 0px 6px 50px; */
@@ -350,6 +360,34 @@ footer p{
         position: relative;
         right:8px;
         /* top:-35px */
+    }
+
+    .packages .designanddrawing,
+    .packages .structure,
+    .packages .Kitchen,
+    .packages .Bathroom,
+    .packages .Doorsandwindow,
+    .packages .Painting,
+    .packages .Flooring,
+    .packages .Electrical,
+    .packages .Miscellaneous{
+        line-height: 21px !important;
+        padding: 10px;
+    }
+
+    footer{
+        margin-top:20px !important;
+    }
+    footer .footer-links{
+        margin-top:30px
+    }
+
+    footer .footer-info{
+        text-align: center;
+    }
+
+    footer .footer-info span{
+        left:150px !important
     }
 
 }
@@ -426,7 +464,7 @@ footer p{
 
     .howitworks {
         height: auto !important;
-        background: #f7f7f7 !important;
+        background: #cccccc7a !important;
         margin:15px 0px;
     }
 
@@ -446,6 +484,9 @@ footer p{
 
 
 @media only screen and (min-width: 768px){
+    .navbar img{
+        display: none;
+    }
     .contactus .line{
         border-left: 1px solid #ddd;
         border-right: 1px solid #ddd;
